[package]
name = "kapitalist_types"
description = "Shared types for Kapitalist backend and frontends"
version = "0.1.0"
authors = ["The kapitalist-app developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kapitalist-app/types"

edition = "2018"

[lib]
name = "kapitalist_types"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
